<resources>
    <string name="app_name">Clothes Ordering Application</string>
    <string name="magazzino">Magazzino</string>
    <string name="send_to_login">Send to Login</string>
    <string name="send_to_registration">Send to registration</string>
    <string name="motto">Our passion is for clothes.</string>
    <string name="logo">Logo</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_your_password">Don\'t remember your password?</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="sign_up1">Sign up</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="creata_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_an_username">Select an username</string>
    <string name="manager_code">Manager code</string>
    <string name="manager">Manager</string>
    <string name="sign_up">Sign up</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login">Login</string>

    <string name="products">Products</string>
    <string name="inspiration">Inspiration</string>
    <string name="shops">Shops</string>
    <string name="my_page">My page</string>
    <string name="favorite">favorite</string>
    <string name="basket">basket</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">TODO5</string>
    <string name="todo6">TODO6</string>
    <string name="todo7">TODO7</string>
    <string name="todo8">TODO8</string>
    <string name="todo9">TODO9</string>
    <string name="todo10">TODO10</string>
    <string name="todo11">TODO11</string>
    <string name="todo12">TODO12</string>
    <string name="todo13">TODO13</string>
    <string name="blouse">BLOUSE</string>
    <string name="todo14">TODO14</string>
    <string name="todo15">TODO15</string>
    <string name="todo16">TODO16</string>
    <string name="todo17">TODO17</string>
    <string name="todo18">TODO18</string>
    <string name="todo19">TODO19</string>
    <string name="todo20">TODO20</string>
    <string name="todo21">TODO21</string>
    <string name="news">NEWS</string>
    <string name="all_products">All products</string>
    <string name="jeans">JEANS</string>
    <string name="dresses">DRESSES</string>
    <string name="t_shirt">T-SHIRT</string>
    <string name="skirt">SKIRT</string>
    <string name="jaket">JAKET</string>
    <string name="coat">COAT</string>
    <string name="sale">SALE</string>
    <string name="accessory">ACCESSORY</string>
    <string name="bag">BAG</string>
    <string name="belt">BELT</string>
    <string name="scarf">SCARF</string>
    <string name="news_btn">News</string>
    <string name="accessory_btn">ACCESSORY</string>
    <string name="items_btn">ITEMS</string>
    <string name="sale_btn">SALE</string>
    <string name="_12">12</string>
    <string name="_13">12</string>
    <string name="heart">heart</string>
    <string name="back">BACK</string>
    <string name="shopping_cart_is_empty">Shopping cart is empty</string>
    <string name="_30_eur">30 eur</string>
    <string name="_25_eur">25 eur</string>
    <string name="total">Total :</string>
    <string name="place_order">Place Order</string>
    <string name="cart">CART</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="username1">Username</string>
    <string name="items_for_news">ITEMS FOR NEWS</string>
    <string name="items_for_accessory">ITEMS FOR ACCESSORY</string>
    <string name="items_for_sale">ITEMS FOR SALE</string>

    <string name="facebook_app_id">1425571864295579</string>
    <string name="fb_login_protocol_scheme">fb1425571864295579</string>
    <string name="go_to_the_home_page">GO TO THE HOME PAGE</string>
    <string name="order_status">Order status</string>
    <string name="the_order_was_successfully_registered">The order was successfully registered.</string>
    <string name="in_2_3_working_days_the_courier_will_contact_you">Your order has been accepted and the courier will contact you soon.</string>
    <string name="back_to_the_home_page">Back to the home page</string>
    <string name="delete">Delete</string>

    <string name="manager_items">Items</string>
    <string name="orders">Orders</string>
    <string name="accept">Accept</string>
    <string name="order1">order1</string>
    <string name="order3">order3</string>
    <string name="order4">order4</string>
    <string name="order5">order5</string>
    <string name="order6">order6</string>
    <string name="order2">order2</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="admin">Admin</string>
    <string name="go_to_user_page">USER</string>
    <string name="go_to_manager_page">MANAGER</string>
    <string name="make_a_new_account">Make a new account</string>
    <string name="go_to_admin_page">ADMIN</string>
    <string name="approve_order">Please wait for a manager to approve your order.</string>
    <string name="create_an_admin_account">Create an admin account</string>
    <string name="user_page">User Page</string>
    <string name="manager_page">Manager Page</string>
    <string name="addtocart">Toggle Add To Cart</string>
    <string name="adminsettings">Admin Settings</string>



</resources>
