<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:labelFor="@+id/name_edit"/>
    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:labelFor="@+id/type_edit"/>
    <EditText
        android:id="@+id/type_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:labelFor="@+id/size_edit"/>
    <EditText
        android:id="@+id/size_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:labelFor="@+id/price_edit"/>
    <EditText
        android:id="@+id/price_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock"
        android:labelFor="@+id/stock_edit"/>
    <EditText
        android:id="@+id/stock_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:labelFor="@+id/stock_edit"/>
    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <Button
        android:id="@+id/save_man"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />
</LinearLayout>