<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/magazzino"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <include
        android:id="@+id/include"
        layout="@layout/access_bar"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/todo1"
                android:src="@drawable/cover" />

            <TextView
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/news"
                android:textSize="25sp" />

            <Button
                android:id="@+id/for_news"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_black"
                android:text="@string/all_products"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/news" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/jeans"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:contentDescription="@string/todo2"
                    android:src="@drawable/blugi" />

                <TextView
                    android:id="@+id/image_for_jeans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/jeans"
                    android:layout_alignTop="@+id/jeans"
                    android:layout_alignEnd="@+id/jeans"
                    android:layout_alignBottom="@+id/jeans"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo3"
                    android:gravity="center"
                    android:text="@string/jeans"
                    android:textColor="#960018"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/dress"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo4"
                    android:src="@drawable/dress" />

                <TextView
                    android:id="@+id/image_for_dress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/dress"
                    android:layout_alignTop="@+id/dress"
                    android:layout_alignEnd="@+id/dress"
                    android:layout_alignBottom="@+id/dress"
                    android:layout_margin="1dp"
                    android:contentDescription="@string/todo5"
                    android:gravity="center"
                    android:text="@string/dresses"
                    android:textColor="#960018"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/t_short"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:contentDescription="@string/todo6"
                    android:src="@drawable/t_short" />

                <TextView
                    android:id="@+id/image_for_t-short"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/t_short"
                    android:layout_alignTop="@+id/t_short"
                    android:layout_alignEnd="@+id/t_short"
                    android:layout_alignBottom="@+id/t_short"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo7"
                    android:gravity="center"
                    android:text="@string/t_shirt"
                    android:textColor="#960018"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/skirt"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo8"
                    android:src="@drawable/skirt" />

                <TextView
                    android:id="@+id/image_for_skirt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/skirt"
                    android:layout_alignTop="@+id/skirt"
                    android:layout_alignEnd="@+id/skirt"
                    android:layout_alignBottom="@+id/skirt"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo9"
                    android:gravity="center"
                    android:text="@string/skirt"
                    android:textColor="#960018"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/accessory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/accessory"
                android:textSize="25sp" />

            <Button
                android:id="@+id/for_accessory"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_black"
                android:text="@string/all_products"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/accessory" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bag"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:contentDescription="@string/todo16"
                    android:src="@drawable/bag" />

                <TextView
                    android:id="@+id/image_for_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/bag"
                    android:layout_alignTop="@+id/bag"
                    android:layout_alignEnd="@+id/bag"
                    android:layout_alignBottom="@+id/bag"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo17"
                    android:gravity="center"
                    android:text="@string/bag"
                    android:textColor="#960018"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/belt"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo18"
                    android:src="@drawable/belt" />

                <TextView
                    android:id="@+id/image_for_belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/belt"
                    android:layout_alignTop="@+id/belt"
                    android:layout_alignEnd="@+id/belt"
                    android:layout_alignBottom="@+id/belt"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo19"
                    android:gravity="center"
                    android:text="@string/belt"
                    android:textColor="#960018"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/scarf"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo20"
                    android:src="@drawable/scarf" />

                <TextView
                    android:id="@+id/image_for_scarf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/scarf"
                    android:layout_alignTop="@+id/scarf"
                    android:layout_alignEnd="@+id/scarf"
                    android:layout_alignBottom="@+id/scarf"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo21"
                    android:gravity="center"
                    android:text="@string/scarf"
                    android:textColor="#960018"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/sale"
                android:textColor="#A91101"
                android:textSize="25sp" />

            <Button
                android:id="@+id/for_sale"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg_black"
                android:text="@string/all_products"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/sale" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/jacket"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:contentDescription="@string/todo10"
                    android:src="@drawable/jacket" />

                <TextView
                    android:id="@+id/image_for_jacket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/jacket"
                    android:layout_alignTop="@+id/jacket"
                    android:layout_alignEnd="@+id/jacket"
                    android:layout_alignBottom="@+id/jacket"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo11"
                    android:gravity="center"
                    android:text="@string/jaket"
                    android:textColor="#960018"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/blouse"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo12"
                    android:src="@drawable/blouse" />

                <TextView
                    android:id="@+id/image_for_blouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/blouse"
                    android:layout_alignTop="@+id/blouse"
                    android:layout_alignEnd="@+id/blouse"
                    android:layout_alignBottom="@+id/blouse"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo13"
                    android:gravity="center"
                    android:text="@string/blouse"
                    android:textColor="#960018"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/coat"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo14"
                    android:src="@drawable/coat" />

                <TextView
                    android:id="@+id/image_for_coat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/coat"
                    android:layout_alignTop="@+id/coat"
                    android:layout_alignEnd="@+id/coat"
                    android:layout_alignBottom="@+id/coat"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/todo15"
                    android:gravity="center"
                    android:text="@string/coat"
                    android:textColor="#960018"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>