<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cart"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/cart"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="5dp"
            android:text="@string/total"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_order"
        android:layout_below="@+id/rl1">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/place_order"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_order_status"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/order_status"
        android:textColor="#000000" />

</RelativeLayout>