<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/products"
        android:layout_gravity="bottom"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:text="@string/products"
        android:layout_marginStart="-5dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-2dp"
        android:fontFamily="cursive"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@drawable/btn_bg"/>

    <Button
        android:id="@+id/inspiration"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:layout_gravity="bottom"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-2dp"
        android:fontFamily="cursive"
        android:text="@string/inspiration"
        android:textSize="12dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/products"
        style="@drawable/btn_bg"/>

    <Button
        android:id="@+id/shop"
        android:layout_gravity="bottom"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:text="@string/shops"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-2dp"
        android:fontFamily="cursive"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inspiration"
        style="@drawable/btn_bg"/>


    <Button
        android:id="@+id/mypage"
        android:layout_gravity="bottom"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:text="@string/my_page"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-2dp"
        android:fontFamily="cursive"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shop"
        style="@drawable/btn_bg"/>

</LinearLayout>