<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_page"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/product_quantity"
            android:textAlignment="viewEnd"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_quantity"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>